--- a/main.html
+++ b/main.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="item1"></div>
+		<div class="item2"></div>
+		<div class="item3"></div>
+	</div>
+	<div class="item4">5</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
