--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="holder">
 		<div class="item1"></div>
 		<div class="item2"></div>
 		<div class="item3"></div>
